terraform  - aws infrastructure/internet-gateway.tf


#2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id

    tags = {
        Name = "main"
    }
}
